# tiktok-semantic

./: .gitignore  README.md  pyproject.toml
configs/: sample.yaml
data/raw/: df_dtaAuthorFavorites.csv  df_dtaAuthorFollowers.csv  df_dtaAuthorFollowings.csv  df_dtaAuthorPosts.csv  df_dtaAuthors.csv  df_dtaPosts.csv  dtaAuthorFavorites.pkl  dtaAuthorFollowers.pkl  dtaAuthorFollowings.pkl  dtaAuthorPosts.pkl  dtaAuthors.pkl  dtaPosts.pkl
data/raw/Videos/7183855666618961195/: summary.txt
data/raw/Videos/7183890636540480774/: summary.txt
data/raw/Videos/7190746443144056069/: summary.txt
data/raw/Videos/7272820833368739114/: summary.txt
data/raw/Videos/7379384416914705707/: summary.txt
data/raw/Videos/7447922155112680734/: summary.txt
data/raw/Videos/7507756166869568810/: summary.txt
data/raw/Videos/7508046635176332552/: summary.txt
data/raw/Videos/7508122368439586050/: summary.txt
data/raw/Videos/7508164065458457902/: summary.txt
docs/: competition_insights.md
notebooks/: 01_competition_analysis.ipynb
scripts/: build_dataset.py  deep_dive_nlp.py  prepare_data.py
src/tiktok_semantic/: __init__.py  features.py  insights.py  io.py  normalize.py  summaries.py
