[project]
name = "tiktok-semantic"
version = "0.1.0"
description = "Semantic marketing analytics pipeline for climate-action TikTok content."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "scikit-learn>=1.3",
  "networkx>=3.1",
  "matplotlib>=3.7",
  "tqdm>=4.66",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
nlp = [
  "sentence-transformers>=2.7",
  "transformers>=4.40",
  "torch>=2.1",
  "yake>=0.4.8",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
